--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ external:                  # shows a footer with social links - for available ic
   - {title: Mail, icon: envelope, url: "mailto:spet5872@ox.ac.uk"}
   - {title: Github, icon: github, url: "https://github.com/yangyang7755"}
   - {title: Subscribe, icon: rss, url: "/feed.xml"}
+  - {title: Instagram, icon: instagram url: "https://www.instagram.com/yangyang7755/?hl=en"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
