--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: Home change, icon: home}
-  - {file: "README.md", title: About me, icon: adress-card}
-  - {file: "RuoHan CV", title: CV, icon: CV}
+  - {file: "index.html", title: "Home change", icon: home}
+  - {file: "README.md", title: "About me", icon: adress-card}
+  - {file: "RuoHan CV", title: "CV", icon: CV}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:spet5872@ox.ac.uk"}
