--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.html", title: "Home change", icon: home}
   - {file: "README.md", title: "About me", icon: adress-card}
   - {file: "RuoHan CV", title: "CV", icon: CV}
-
+  - {title: "NDCN", url:"https://www.ndcn.ox.ac.uk/team/ruohan-liu"}
+  - {title: "Lab", url: "https://www.ndcn.ox.ac.uk/research/pain-and-aversive-learning"}
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:spet5872@ox.ac.uk"}
   - {title: Github, icon: github, url: "https://github.com/yangyang7755"}
