--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,10 @@ minimal: false             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.html", title: "Home change", icon: home}
   - {file: "README.md", title: "About me", icon: adress-card}
-  - {file: "RuoHan CV", title: "CV", icon: CV}
+  - {file: "RuoHanCV.pdf", title: "CV", icon: CV}
   - {title: "About me", url: "https://www.ndcn.ox.ac.uk/team/ruohan-liu"}
   - {title: "Lab", url: "https://www.ndcn.ox.ac.uk/research/pain-and-aversive-learning"}
+  - {title: "Blog", file: "/blog.md"}
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:spet5872@ox.ac.uk"}
   - {title: Github, icon: github, url: "https://github.com/yangyang7755"}
