--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,9 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md", title: "Home change", icon: home}
-  - {file: "RuoHanCV.pdf", title: "CV", icon: CV}
-  - {title: "About me", url: "https://www.ndcn.ox.ac.uk/team/ruohan-liu"}
+  - {file: "/RuoHanCV.pdf", title: "CV"}
+  - {title: "About me", file:"/Aboutme.md"}
+  - {title: "Base", url: "https://www.ndcn.ox.ac.uk/team/ruohan-liu"}
   - {title: "Lab", url: "https://www.ndcn.ox.ac.uk/research/pain-and-aversive-learning"}
   - {title: "Blog", file: "/blog.md"}
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
