--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,21 @@
+# Basic site settings 
+
 title: "RuoHan Yangyang Liu Luo"
-author: "RuoHan Yangyang Liu Luo"
+
 description: "@Oxford University"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
 date_format: "%B %d, %Y"
+author: 
+  avatar           : "profile.png"
+  name             : "RuoHan"
+  pronouns         : "she/her"  
+  bio              : "Hi! I am RuoHan, a research student currently working in Ben Seymour's lab on Pain and Aversive Learning. Our lab is based at the Nuffield Department of Clinical Neuroscience at Oxford University. My project looks at the distinctive properties of 'postive pain' or that the pain that is objectively perceived as painful but can be subjectively associated with positiveness or even reward. For instance, exercise related muscle soreness should ,in theory, be unpleasant and distressing. However, it is usual that people perceive it as an endorsement of progress and effectiveness of their previous workout. This is so distinctive to many other types of pathological pain which persist after accidents and operations. Even when the patient is fully recovered from their injuries, the persistent pain can make lifes of patients miserable and depressing. Understading more about the neurophysiology that differentiates both types of pain could potentially help us develop neurofeedback training programs to help chronic pain patients dissociate pain from 'injury, damage and depressive emotions' and thereby aid rehabilitation from this clinical case which drastically reduces quality of life in patients."
+  location         : "Earth"
+  employer         : "Oxford University"
+  uri              : "https://www.ox.ac.uk/"
+  email            : "ruohan.liu@ox.ac.uk" 
 
 # Layout
 
